--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
+    },
+    "dependencies": {
+        "dropbox": "^4.0.30"
     }
 }
